# django-imdb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
django_imdb/: __init__.py  admin.py  apps.py  export_tsv.py  import_tsv.py  models.py  pocketsearch.py  utils.py
django_imdb/management/commands/: __init__.py  export_imdb_tsv.py  import_imdb_tsv.py  reindex_search.py
django_imdb/migrations/: 0001_initial.py  __init__.py
