########### BASIC METADATA ###############
[project]
name = "django-imdb"
dynamic = ["version"]
dependencies = [
    "django>=4.2",
    "pocketsearch>=0.41.0",
]
description = "A Django app to work with IMDb non-commercial datasets."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">= 3.11"
authors = [
    {name = "Thomas Steen Rasmussen", email = "thomas@gibfest.dk"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/tykling/django-imdb"

########### DEPENDENCIES ###############
[project.optional-dependencies]
dev = [
    "build==1.3.0",
    "prek==0.2.0",
    "setuptools-scm == 8.1.0",
]
test = [
    "coverage[toml]==7.6.12",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pytest-randomly==3.16.0",
    "tox==4.24.1",
]

########### SETUPTOOLS ################
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"

########### RUFF ######################
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "G004", # Logging statement uses f-string
    "EM101", # Exception must not use a string literal, assign to variable first
    "COM812", # missing-trailing-comma (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "ISC001", # single-line-implicit-string-concatenation (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "D203", # incorrect-blank-line-before-class (conflict with D211)
    "D213", # multi-line-summary-second-line (conflict with D212)
    "RUF012", # mutable must be annotated with ClassVar
]
[tool.ruff.lint.per-file-ignores]
"_version.py" = [
    "UP007", # generated code
]

############ MYPY #####################
[tool.mypy]
python_version = "3.11"
exclude = [
    "build/",
    "venv/",
]


########### COVERAGE.PY ###############
[tool.coverage.run]
omit = ["_version.py"]


########### PYTEST ####################
[tool.pytest.ini_options]
log_format = "%(asctime)s pytest %(levelname)s %(name)s.%(funcName)s():%(lineno)i:  %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
# consider warnings errors
filterwarnings = [
    "error",
    "ignore:.*pkgutil\\.find_loader.*:DeprecationWarning",
]
addopts = "--cov=. --cov-report=xml --cov-report=html --cov-config=./pyproject.toml"


########### TOX #######################
[tool.tox]
envlist = ["py311", "py312", "py313", "py314"]
skipsdist = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = [
    ".[test]",
]
commands = [
    ["pytest"]
]
